# guarded-continuation-checker

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CRATE_README.md  Cargo.toml  README.md  SECURITY.md
docs/: ARCHITECTURE.md  ARTIFACT_SCHEMA_V2.md  ARTIFACT_SCHEMA_V3.md  ARTIFACT_SCHEMA_V4.md  BRAND.md  BTOR2_BOUNDED_SEARCH_V1.md  BTOR2_BOUNDED_SEARCH_V2.md  BTOR2_BOUNDED_SEARCH_V3.md  BTOR2_BOUNDED_SEARCH_V3_PLAN.md  BTOR2_BOUNDED_SEARCH_V4.md  BTOR2_BOUNDED_SEARCH_V4_PLAN.md  BTOR2_BOUNDED_SEARCH_V5.md  BTOR2_BOUNDED_SEARCH_V5_PLAN.md  BTOR2_BRAKING_PHASE_CERTIFICATE_V1.md  BTOR2_CHANNEL_PROPERTY_CLI_V1.md  BTOR2_CHANNEL_PROPERTY_PROCESS_RESOURCES_V1.md  BTOR2_CHANNEL_TRACE_MONITOR_EXPERIMENT_V1.md  BTOR2_COMPONENT_CONTRACT_V1.md  BTOR2_CONTROLLER_OBLIGATION_REUSE_V1.md  BTOR2_COUNTER_PHASE_CERTIFICATE_V1.md  BTOR2_MOTION_CURVE_CERTIFICATE_V1.md  BTOR2_PREDICATE_SET_CERTIFICATE_V1.md  BTOR2_PREDICATE_SET_CERTIFICATE_V2.md  BTOR2_PREDICATE_SET_CERTIFICATE_V3.md  BTOR2_PWM_BITBLAST_V1.md  BTOR2_WORD_CORE_V1.md  BTOR2_WORD_REGION_CERTIFICATE_V1.md  CALIPTRA_WDT_EXPERIMENT_V1.md  CAUSAL_ANALYSIS.md  CAUSAL_BATCH.md  CAUSAL_BUNDLE_V1.md  CAUSAL_STRATEGY_COMPARISON.md  CERTIFAIGER_EQUIVALENT_EVIDENCE_PLAN.md  COMPATIBILITY_AND_MIGRATION.md  COMPOSED_WITNESS_BASELINE_V1.md  CONTROLLER_MTBDD_CLI_V1.md  CONTROLLER_MTBDD_CLOSEST_SYSTEMS.md  CONTROLLER_MTBDD_EQUIVALENCE_PROOF_V1.md  CONTROLLER_MTBDD_PLANT_PORTFOLIO_V1.md  CONTROLLER_MTBDD_PROCESS_RESOURCES_V1.md  (+89 more)
examples/: README.md  btor2_channel_trace_cohort.rs  btor2_complete_region_certificate_probe.rs  btor2_complete_region_probe.rs  btor2_component_reuse_benchmark.rs  btor2_family_orbit_probe.rs  btor2_family_probe.rs  btor2_pwm_bitblast_probe.rs  btor2_reachable_equivalence_certificate_probe.rs  btor2_symbolic_class_certificate_probe.rs  btor2_symbolic_class_probe.rs  btor2_symbolic_property_codec_probe.rs  btor2_symbolic_property_portfolio_probe.rs  btor2_symbolic_property_portfolio_v2_probe.rs  btor2_symbolic_property_preflight_probe.rs  btor2_trace_portfolio_probe.rs  changing_plant_controller_evidence_reuse.rs  controller-split-resource-policy-v1.txt  controller_plant_batch_benchmark.rs  export_composed_witness_plant_family.rs  export_washing_controller_certified_baseline.rs  modular-demo.cnf  opentitan_prim_count_query_service.rs  opentitan_prim_count_revision_batch.rs  public_washing_controller_admission.rs  public_washing_controller_mtbdd.rs  public_washing_controller_mtbdd_proof.rs  public_washing_controller_mtbdd_reuse_benchmark.rs  public_washing_controller_physical_plant_benchmark.rs  watchdog-controller.md  (+5 more)
(+814 files in other folders)
