[package]
name = "continuation-quotient-sat"
version = "0.19.0"
edition = "2024"
rust-version = "1.97"
description = "Research implementation of exact continuation-quotient compilation for structured SAT"
license = "Apache-2.0"
repository = "https://github.com/kabudu/continuation-quotient-sat"
keywords = ["sat", "knowledge-compilation", "research"]
categories = ["algorithms", "science"]

[profile.release]
debug = true

[dependencies]
libc = "0.2.186"
sha2 = "0.11.0"
varisat = "0.2.2"
