[package]
name = "guarded-continuation-checker"
version = "0.29.0"
edition = "2024"
rust-version = "1.97"
description = "Proof-carrying bounded verification for embedded firmware and RTL, powered by CQ-SAT"
readme = "CRATE_README.md"
license = "Apache-2.0"
repository = "https://github.com/kabudu/guarded-continuation-checker"
documentation = "https://docs.rs/guarded-continuation-checker"
keywords = ["verification", "embedded", "sat", "aiger", "firmware"]
categories = ["development-tools", "science", "algorithms"]
include = [
    "Cargo.lock",
    "Cargo.toml",
    "CRATE_README.md",
    "LICENSE",
    "README.md",
    "src/**",
]

[features]
default = []
production-firmware = []

[profile.release]
debug = true

[dependencies]
libc = "0.2.186"
sha2 = "0.11.0"
varisat = "0.2.2"
varisat-checker = "0.2.2"
