[package]
name = "guarded-continuation-checker"
version = "0.30.0"
edition = "2024"
rust-version = "1.97"
description = "Proof-carrying bounded verification for embedded firmware and RTL, powered by CQ-SAT"
readme = "CRATE_README.md"
license = "Apache-2.0"
repository = "https://github.com/kabudu/guarded-continuation-checker"
documentation = "https://docs.rs/guarded-continuation-checker"
keywords = ["verification", "embedded", "sat", "aiger", "firmware"]
categories = ["development-tools", "science", "algorithms"]
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/CRATE_README.md",
    "/LICENSE",
    "/README.md",
    "/src/**",
]

[package.metadata.cargo-semver-checks.lints]
# Before 1.0, additive operation telemetry variants are permitted in a minor
# release. Every other default major-change lint remains enforced by the
# version-aware compatibility check.
enum_variant_added = { required-update = "minor" }

[features]
default = []
production-firmware = []
research-qatq-transport = ["dep:qatq"]

[profile.release]
debug = true

[dependencies]
libc = "0.2.186"
qatq = { version = "=0.1.4", optional = true }
sha2 = "0.11.0"
varisat = "0.2.2"
varisat-checker = "0.2.2"
